# pandas_course

./: pyproject.toml  requirements.txt  series.ipynb
extra/: files.ipynb
extra/files/: data.json  data.txt  numbers.csv  scientist.txt  scientist2.txt
notebooks/: dataframe.ipynb  explorando_dataframe.ipynb  series.ipynb  series_exercices.ipynb
